--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,7 @@
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
+/config/application.yml
+
+# Ignore application configuration
+/config/application.yml
